# php-fpm-queue-monitor

./: Cargo.toml  Dockerfile  README.md  php-fpm-queue-monitor.conf  php-fpm-queue-monitor.service
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
