[package]
name = "php-fpm-queue-monitor"
version = "0.1.0"
edition = "2021"

# Build targets for cross-compilation
[[bin]]
name = "php-fpm-queue-monitor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
aws-config = "1.0"
aws-sdk-cloudwatch = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
